--- a/Makale_DataAccessLayer/Makale_DataAccessLayer.csproj
+++ b/Makale_DataAccessLayer/Makale_DataAccessLayer.csproj
@@ -56,6 +56,8 @@
   <ItemGroup>
     <Compile Include="DatabaseContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository.cs" />
+    <Compile Include="Singleton.cs" />
     <Compile Include="VeriTabanıOlusturucu.cs" />
   </ItemGroup>
   <ItemGroup>
