--- a/Makale_Web/Views/web.config
+++ b/Makale_Web/Views/web.config
@@ -17,6 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="Makale_Web" />
+        <add namespace="Makale_Entities"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
