--- a/Makale_Web/Makale_Web.csproj
+++ b/Makale_Web/Makale_Web.csproj
@@ -99,6 +99,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\login-register.css" />
     <Content Include="Content\shop-homepage.css" />
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -116,6 +117,7 @@
     <Content Include="Images\a5eebe0fbab64f2a0f517bfc58bd1f93.jpg" />
     <Content Include="Images\c0fc6718137400881ab8a02c538cb65e.jpg" />
     <Content Include="Images\e12ab41303db9c8e133687dacdc43e3d--wallpaper-sky-nature-wallpaper.jpg" />
+    <Content Include="Images\manzara.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.6.1.js" />
@@ -141,6 +143,9 @@
     <Content Include="Scripts\jquery-3.6.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.6.1.min.map" />
     <Content Include="Views\Shared\_PartialPageKategoriler.cshtml" />
+    <Content Include="Views\Home\About.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Home\KayitOl.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
