--- a/Makale_Web/Web.config
+++ b/Makale_Web/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="DatabaseContext" connectionString="server=DESKTOP-HNE43R2;database=MakaleWeb;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="DatabaseContext" connectionString="server=DESKTOP-TUMHS1A;database=MakaleWeb;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
