Login ve Kayıt Ol İşlemleri2

--- a/Makale_BusinessLayer/Makale_BusinessLayer.csproj
+++ b/Makale_BusinessLayer/Makale_BusinessLayer.csproj
@@ -51,12 +51,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessLayerSonuc.cs" />
     <Compile Include="KategoriYonet.cs" />
+    <Compile Include="KullaniciYonet.cs" />
     <Compile Include="NotYonet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Makale_Common\Makale_Common.csproj">
+      <Project>{e00c9ba5-b2f4-49db-b1a6-d1af9ccf00c9}</Project>
+      <Name>Makale_Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Makale_DataAccessLayer\Makale_DataAccessLayer.csproj">
       <Project>{5e357331-5ca9-424f-9b12-ac30c0f3d2e4}</Project>
       <Name>Makale_DataAccessLayer</Name>
