--- a/Makale_Web/Makale_Web.csproj
+++ b/Makale_Web/Makale_Web.csproj
@@ -146,6 +146,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Home\KayitOl.cshtml" />
+    <Content Include="Views\Home\UserActivate.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -161,6 +162,10 @@
     <ProjectReference Include="..\Makale_BusinessLayer\Makale_BusinessLayer.csproj">
       <Project>{7e23d056-d93b-4e03-97f6-d9d7b083061c}</Project>
       <Name>Makale_BusinessLayer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Makale_Common\Makale_Common.csproj">
+      <Project>{e00c9ba5-b2f4-49db-b1a6-d1af9ccf00c9}</Project>
+      <Name>Makale_Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\Makale_Entities\Makale_Entities.csproj">
       <Project>{d0ac1d78-b4d6-4c11-97f4-a442dc6f3975}</Project>
