--- a/Makale_Web/Web.config
+++ b/Makale_Web/Web.config
@@ -13,6 +13,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+	  <add key="MailHost" value="smtp.gmail.com"/>
+	  <add key="MailPort" value="587"/>
+	  <add key="MailUser" value="kayaduydu93@gmail.com"/>
+	  <add key="MailPass" value="1234"/>
+	  <add key="SiteRootUri" value="https://localhost:44352"/>
   </appSettings>
   <connectionStrings>
     <add name="DatabaseContext" connectionString="server=DESKTOP-TUMHS1A;database=MakaleWeb;Integrated Security=True;" providerName="System.Data.SqlClient" />
