--- a/Makale_Web/Makale_Web.csproj
+++ b/Makale_Web/Makale_Web.csproj
@@ -118,6 +118,8 @@
     <Content Include="Images\c0fc6718137400881ab8a02c538cb65e.jpg" />
     <Content Include="Images\e12ab41303db9c8e133687dacdc43e3d--wallpaper-sky-nature-wallpaper.jpg" />
     <Content Include="Images\manzara.jpg" />
+    <Content Include="Images\user1.jpg" />
+    <Content Include="Images\user_1.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.6.1.js" />
@@ -147,6 +149,10 @@
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Home\KayitOl.cshtml" />
     <Content Include="Views\Home\UserActivate.cshtml" />
+    <Content Include="Views\Home\UserActivateHata.cshtml" />
+    <Content Include="Views\Home\KayitBasarili.cshtml" />
+    <Content Include="Views\Home\ProfilGoster.cshtml" />
+    <Content Include="Views\Home\ProfilDegistir.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
