--- a/Makale_Web/Web.config
+++ b/Makale_Web/Web.config
@@ -21,7 +21,7 @@
 	  <add key="SiteRootUri" value="https://localhost:44352"/>
   </appSettings>
   <connectionStrings>
-    <add name="DatabaseContext" connectionString="server=DESKTOP-TUMHS1A;database=MakaleWeb;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="DatabaseContext" connectionString="server=203-UGURCAN;database=MakaleWeb;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
