--- a/Makale_DataAccessLayer/Makale_DataAccessLayer.csproj
+++ b/Makale_DataAccessLayer/Makale_DataAccessLayer.csproj
@@ -55,6 +55,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseContext.cs" />
+    <Compile Include="Migrations\202212131141144_InitialCreate.cs" />
+    <Compile Include="Migrations\202212131141144_InitialCreate.designer.cs">
+      <DependentUpon>202212131141144_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202212190859439_KullaniciProfilResmiEkle.cs" />
+    <Compile Include="Migrations\202212190859439_KullaniciProfilResmiEkle.designer.cs">
+      <DependentUpon>202212190859439_KullaniciProfilResmiEkle.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="Singleton.cs" />
@@ -69,6 +78,14 @@
       <Project>{D0AC1D78-B4D6-4C11-97F4-A442DC6F3975}</Project>
       <Name>Makale_Entities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202212131141144_InitialCreate.resx">
+      <DependentUpon>202212131141144_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202212190859439_KullaniciProfilResmiEkle.resx">
+      <DependentUpon>202212190859439_KullaniciProfilResmiEkle.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
