--- a/Makale_Web/Web.config
+++ b/Makale_Web/Web.config
@@ -1,27 +1,29 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-
-	  <add key="MailHost" value="smtp.gmail.com"/>
-	  <add key="MailPort" value="587"/>
-	  <add key="MailUser" value="kayaduydu93@gmail.com"/>
-	  <add key="MailPass" value="1234"/>
-	  <add key="SiteRootUri" value="https://localhost:44352"/>
+    <add key="MailHost" value="smtp.gmail.com" />
+    <add key="MailPort" value="587" />
+    <add key="MailUser" value="kayaduydu93@gmail.com" />
+    <add key="MailPass" value="1234" />
+    <add key="SiteRootUri" value="https://localhost:44352" />
   </appSettings>
   <connectionStrings>
-    <add name="DatabaseContext" connectionString="server=203-UGURCAN;database=MakaleWeb;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="DatabaseContext" connectionString="server=203-UGURCAN;database=MakaleWeb;Integrated Security=True;"
+      providerName="System.Data.SqlClient" />
+    <add name="Makale_WebContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=Makale_WebContext-20221220135924; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|Makale_WebContext-20221220135924.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
@@ -53,5 +55,10 @@
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
   </entityFramework>
 </configuration>
