--- a/Makale_Web/Web.config
+++ b/Makale_Web/Web.config
@@ -1,13 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
   <configSections>
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -20,10 +20,8 @@
     <add key="SiteRootUri" value="https://localhost:44352" />
   </appSettings>
   <connectionStrings>
-    <add name="DatabaseContext" connectionString="server=203-UGURCAN;database=MakaleWeb;Integrated Security=True;"
-      providerName="System.Data.SqlClient" />
-    <add name="Makale_WebContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=Makale_WebContext-20221221135941; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|Makale_WebContext-20221221135941.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="DatabaseContext" connectionString="server=203-UGURCAN;database=MakaleWeb;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="Makale_WebContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=Makale_WebContext-20221221135941; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|Makale_WebContext-20221221135941.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
